[gd_scene load_steps=6 format=3 uid="uid://b8p7hjghg4cxu"]

[ext_resource type="Texture2D" uid="uid://bbw8i6v8xh7cr" path="res://Scene/Main Menu 1.png" id="1_2ftqv"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ubuvw"]
[ext_resource type="AudioStream" uid="uid://ct0l6wnr1yty2" path="res://Scene/highway-167255.ogg" id="3_a402u"]
[ext_resource type="AudioStream" uid="uid://be7r4sk0hewtg" path="res://Scene/click-button-140881.mp3" id="3_juuvi"]
[ext_resource type="Texture2D" uid="uid://gpdhgihahw0r" path="res://Assets/delete-button.png" id="5_sv7vb"]

[node name="Control" type="Control" node_paths=PackedStringArray("settings_ui")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1398.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubuvw")
settings_ui = NodePath("CanvasLayer")

[node name="MainMenu1" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(269, 481)
scale = Vector2(1.18096, 1.33993)
texture = ExtResource("1_2ftqv")

[node name="PlayButton" type="Button" parent="MainMenu1"]
visibility_layer = 0
offset_left = -135.0
offset_top = -45.0
offset_right = 136.0
offset_bottom = 46.0

[node name="SettingsButton" type="Button" parent="MainMenu1"]
visibility_layer = 0
offset_left = -125.0
offset_top = 83.0
offset_right = 128.0
offset_bottom = 172.0

[node name="ExitButton" type="Button" parent="MainMenu1"]
visibility_layer = 0
offset_left = -127.0
offset_top = 207.0
offset_right = 126.0
offset_bottom = 293.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="MainMenu1"]
position = Vector2(-135, -45)
stream = ExtResource("3_juuvi")
volume_db = 13.333
pitch_scale = 2.52

[node name="Bgmusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_a402u")
volume_db = 6.667
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -2
offset_left = -57.0
offset_top = -35.0
offset_right = 598.0
offset_bottom = 1017.0
color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="Music" type="Label" parent="CanvasLayer"]
offset_left = 39.0
offset_top = 262.0
offset_right = 180.0
offset_bottom = 331.0
theme_override_font_sizes/font_size = 50
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer"]
offset_left = 211.0
offset_top = 291.0
offset_right = 520.0
offset_bottom = 307.0

[node name="Title" type="Label" parent="CanvasLayer"]
offset_left = 160.0
offset_top = 90.0
offset_right = 353.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 50
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 372.0
offset_right = 434.0
offset_bottom = 449.0
theme_override_font_sizes/font_size = 50
text = "Fullscreen"

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 474.0
offset_top = 23.0
offset_right = 986.0
offset_bottom = 535.0
scale = Vector2(0.1, 0.105)
texture_normal = ExtResource("5_sv7vb")
